<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GprinterSample</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="port">端口</string>
    <string name="bluetooth">蓝牙</string>
    <string name="usb">USB</string>
    <string name="ethernet">网口</string>
    <string name="print_mode">打印模式</string>
    <string name="tsc">标签</string>
    <string name="esc">票据</string>
    <string name="print_text">打印文字</string>
    <string name="print_image">打印图片</string>
    <string name="print_1d_barcode">打印一维码</string>
    <string name="open">打开端口</string>
    <string name="close">关闭端口</string>
    <string name="receive">接收的数据</string>
    <string name="query">查询状态</string>
</resources>
