<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port" />

    <RadioGroup
        android:id="@+id/rgPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/port"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bluetooth" >
        </RadioButton>

        <RadioButton
            android:id="@+id/rbUsb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usb" >
        </RadioButton>

        <RadioButton
            android:id="@+id/rbEthernet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ethernet" >
        </RadioButton>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openButtonClicked"
            android:text="@string/open" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="closeButtonClicked"
            android:text="@string/close" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_mode" />

    <RadioGroup
        android:id="@+id/rgPrintMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/print_mode"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbTsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tsc" >
        </RadioButton>

        <RadioButton
            android:id="@+id/rbEsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esc" >
        </RadioButton>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendTextButtonClicked"
            android:text="@string/print_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendImageButtonClicked"
            android:text="@string/print_image" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="queryButtonClicked"
            android:text="@string/query" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendBarcodeButtonClicked"
        android:text="@string/print_1d_barcode" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@drawable/gprinter" />

</LinearLayout>